--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Site para download de documentos">
+    <meta name="keywords" content="HTML,CSS,firebase,JavaScript">
+    <meta name="author" content="carlos eduardo cova santos">
+    
     <title>Project Docments</title>
 
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -41,7 +46,7 @@
                         <h2><i class="fab fa-buffer"> </i> Resultado da pesquisa</h2>
                         <div id="list"></div>
                         <ul id="listLinks">
-                            
+
                         </ul>
                         <button type="button" class="btn btn-info btn-block btn-lg" onclick="back()">Voltar</button>
                     </div>
